# famapp-django-backend

./: .gitignore  CLAUDE.md  FASTAPI_TODO.md  INVITATION_TODO.md  NGROK_SETUP.md  README.md  TEN_COMMANDMENTS.md  TODO.md  docker-compose.staging.yml  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  test_cleanup_task.py
.envs/.test/: .django  .frontend  .postgres
.github/workflows/: ci.yml
backend/: pytest.ini
backend/apps/invitations/: admin.py  apps.py  models.py  permissions.py  tasks.py
backend/apps/invitations/api/: __init__.py  serializers.py  urls.py  views.py
backend/apps/invitations/migrations/: 0001_initial.py  0002_update_role_field.py  0003_invitation_first_name_invitation_last_name.py  0004_make_names_required.py  0005_add_optimized_indexes.py
backend/apps/invitations/services/: __init__.py  bulk_invitation_service.py  email_template_service.py  invitation_expiry_service.py  invitation_service.py  invitation_stats_service.py  invitation_status_service.py  invitation_token_service.py  permission_service.py
backend/apps/invitations/tests/: __init__.py  test_api.py  test_email_template_service.py  test_models.py  test_permission_service.py  test_services.py  test_status_service.py  test_token_service.py
backend/apps/invitations/utils/: __init__.py  query_debugging.py
backend/apps/permissions/: admin.py  constants.py  mixins.py  models.py  tests.py
backend/apps/permissions/migrations/: 0001_initial.py  0002_initial.py  0003_permission_public_id_resource_public_id_and_more.py  0004_alter_permission_public_id_alter_resource_public_id_and_more.py
backend/apps/profiles/: admin.py  constants.py  models.py  permissions.py
backend/apps/profiles/api/: serializers.py  urls.py  views.py
backend/apps/profiles/migrations/: 0001_initial.py
backend/apps/profiles/services/: avatar_service.py  cache_service.py
backend/apps/profiles/tests/: test_avatar_service.py  test_cache_service.py  test_fullstack_integration.py  test_integration.py  test_models.py  test_performance_benchmarks.py  test_serializers.py  test_views.py
backend/apps/projects/: admin.py  models.py  permissions.py
backend/apps/projects/api/: __init__.py  serializers.py  urls.py  views.py
backend/apps/projects/migrations/: 0001_initial.py  0002_add_unique_constraint.py  0003_alter_comment_public_id_alter_project_public_id_and_more.py
backend/apps/projects/tests/: factories.py  test_models.py  test_permissions.py  test_serializers.py  test_views.py
backend/apps/shared/: admin.py  apps.py  mixins.py  models.py  permissions.py  serializers.py  services.py  tasks.py  urls.py  validators.py  views.py
backend/apps/shared/migrations/: 0001_initial.py  0002_todo.py  0003_scheduleevent.py  0004_groceryitem.py  0005_pet_petactivity.py
backend/apps/shared/tests/: __init__.py  conftest.py  test_admin.py  test_e2e_flows.py  test_family_member_views.py  test_family_models.py  test_family_serializers.py  test_family_views.py  test_grocery_item_model.py  test_grocery_views.py  test_mixins.py  test_models.py  test_openapi.py  test_permissions.py  test_pet_activity_model.py  test_pet_model.py  test_pet_views.py  test_schedule_event_model.py  (+7 more)
backend/apps/templates/: home.html
backend/apps/users/: adapters.py  admin.py  models.py  otp.py  tasks.py
backend/config/: api_router.py  asgi.py  urls.py  wsgi.py
backend/config/settings/: base.py  local.py  production.py  test.py
compose/local/django/: Dockerfile  start
compose/local/docs/: Dockerfile
compose/local/frontend/: Dockerfile
compose/local/nginx/: Dockerfile  nginx.conf
compose/production/django/: Dockerfile
compose/production/traefik/: traefik.yml
docs/: API_ENDPOINTS_REFERENCE.md  API_INVITATION_GUIDE.md  AUTH_FLOW_CHANGES.md  conf.py  index.rst
frontend/: .eslintrc-auto-import.json  LESSONS_LEARNED.md  auto-imports.d.ts  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/scripts/: fix-broken-classes.cjs  fix-dark-duplicates.cjs  fix-html-structure.cjs  migrate-dark-mode.cjs
frontend/src/: App.vue  main.ts
frontend/src/assets/: main.css
frontend/src/components/: ThemeToggle.vue
frontend/src/composables/: useDebounce.ts  useFormFieldClasses.ts
frontend/src/layouts/: AuthLayout.vue  DashboardLayout.vue  DefaultLayout.vue
frontend/src/router/: index.ts
frontend/src/services/: api.ts  userService.ts
frontend/src/stores/: auth.ts  theme.ts  toast.ts
frontend/src/utils/: dateHelpers.ts  userHelpers.ts  veeValidate.ts
frontend/src/views/: NotFoundView.vue
(+165 files in other folders)
